# mcp

./: sitemap.xml
search/: search_index.json
servers/dynamodb-mcp-server/: index.html
servers/kendra-index-mcp-server/: index.html
src/aws-cloudcontrol-mcp-server/: .secrets.baseline  CHANGELOG.md  README.md  pyproject.toml  run_tests.sh
src/aws-cloudcontrol-mcp-server/awslabs/aws_cloudcontrol_server/: server.py
src/aws-cloudcontrol-mcp-server/tests/: __init__.py  conftest.py  run_integration_tests.sh  test_server.py  test_server_integration.py
src/aws-location-mcp-server/awslabs/aws_location_server/: server.py
